--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <title>Pinterest</title>
+    <title>ShareMe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
